<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Gardenia</string>
    <string name="enter_btn_txt">Enter</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="descriptions">Descriptions</string>
    <string name="not_available">Not Available</string>
    <string name="cooking">Cooking Instructions</string>
    <string name="energy">Energy : </string>
    <string name="price">Price : </string>
    <string name="total_price">Price</string>
    <string name="order">Add to Order</string>
    <string name="remove">Remove</string>
    <string name="select">Select</string>
    <string name="quantity">Quantity :</string>
    <string name="total">Total</string>
    <string name="cal">cal</string>
    <string name="currency">Rs</string>
    <string name="item_status">Item Status</string>
    <string name="items">Items            : </string>
    <string name="submit_order">Submit Order</string>
    <string name="suggestion_notice">We Noticed...</string>
    <string name="suggestion_yes">YES PLEASE</string>
    <string name="suggestion_no">NO THANKS</string>
    <string name="suggestions_continue">Continue to Submit Order</string>
    <string name="items_count">Items</string>
    <string name="summery">Summary</string>
    <string name="categories"> Browse Categories</string>
    <string name="categories_header">Categories</string>
    <string name="status_pending">Pending</string>
    <string name="orders">Orders</string>
    <string name="price_text">PRICE</string>
    <string name="my_orders">My Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="sent_orders">Sent Orders</string>
    <string name="confirmed_orders">My Sent Orders</string>
    <string name="change_order">Change Order</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="forget">Did you forget?</string>
    <string name="back">BACK</string>
    <string name="back_settings">Back</string>
    <string name="exit_app">Exit Application</string>
    <string name="menu">MENU</string>
    <string name="refresh">Refresh Order</string>

    <!-- string arrays -->
    <string-array name="portion_sizes">
        <item>Small Rs.000</item>
        <item>Regular Rs.000</item>
        <item>Large Rs.000</item>
    </string-array>

    <!-- strings for Language Names -->
    <string name="lang_uk">English (UK)</string>
    <string name="lang_ch">Chinese</string>
    <string name="lang_en">English (US)</string>
    <string name="lang_fr">French</string>

    <!-- strings for messages -->
    <string name="welcome">Welcome to Cafe</string>
    <string name="select_lang">Select Your Language</string>
    <string name="message_lang">By selecting a language you accept terms and conditions</string>
    <string name="welcome_authentication">Waiter Authentication</string>
    <string name="welcome_setTable">Set the Table No.</string>
    <string name="welcome_setDevice">Set the Device Name</string>
    <string name="welcome_settings">Settings Menu</string>
    <string name="copyrights">2012 Cafe | All rights reserved.</string>
    <string name="info_on_price">This total can be subjected to other restaurant charges.</string>
    <string name="message">Please Check the details of your order carefully and then select delivery options to proceed</string>
    <string name="suggestion_message_begin">You did not order any </string>
    <string name="suggestion_message_end">Would you like to order now?</string>
    <string name="confirm_submit_message">Are you sure you want to submit the orders?</string>
    <string name="confirm_clear_orders">Are You sure you want to clear all the orders?</string>
    <string name="clear_order_success">Successfully deleted order data</string>
    <string name="clear_order_fail">Failed to clear order data</string>
    <string name="exit_confirmation">Are you sure you want to exit ?</string>
    <string name="submit_empty_order_message">Add some items to order before submit</string>
    <string name="set_device_name_succesfully">Successfully set the Device Name</string>

    <!-- strings for settings -->
    <string name="table_no">Table No</string>
    <string name="device_name">Device Name</string>
    <string name="waiter_id">Waiter ID :</string>
    <string name="access_code">Access Code :</string>
    <string name="set_table_no">Set Table No</string>
    <string name="set_device_name">Set Device Name</string>
    <string name="clear_orders">Clear Orders</string>
    <string name="sync_menu">Synchronize Menu</string>
    <string name="sync_other">Synchronize Other Data</string>

    <!-- strings for errors -->
    <string name="error_waiterID">Please enter the Waiter ID!</string>
    <string name="error_accessCode">Please enter the Access Code!</string>
    <string name="error_tableNo">Please enter the Table No!</string>
    <string name="error_deviceName">Please enter the Device Name!</string>
    <string name="error_bluetooth">No Blue Tooth Compatibility. Can not set the Device Name</string>
	<string name="inncorrect_username_password">Username or password you entered is incorrect</string>
    
    <!-- strings for action titles -->
    <string name="select_language">Select Language</string>
    <string name="mainmenu">Select Category</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_order">My Order</string>
    <string name="my_sent_order">My Sent Order</string>
    <string name="select_item">Select Item</string>

    <!-- strings for header menu items -->
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="connecting_to_server">Connecting to Server...</string>

</resources>