<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lang_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_heading_language"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/top_bar"
        android:orientation="vertical" >
    </LinearLayout>   

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:padding="50dp" >

            

            <TextView
                android:id="@+id/selectLang_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="85dp"
                android:text="@string/select_lang"
                android:textColor="@color/language_selectLang_language"
                android:textSize="24dp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp" >

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
            <TextView
                android:id="@+id/table_no_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_no"
                android:textColor="@color/language_table_no_language"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:textStyle="bold" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/message_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="25dp"
            android:text="@string/message_lang"
            android:textColor="@color/language_message_lan"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>